// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fixtures > should match snapshot of fibonacci.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DB",
        "label": "INICIO",
        "position": [
          258,
          262,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          1,
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          288,
          313,
        ],
        "size": 16,
        "src": 4097,
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          321,
          330,
        ],
        "size": 8,
        "src": 0,
        "start": 8196,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AH",
        "position": [
          338,
          352,
        ],
        "size": 8,
        "src": {
          "address": 4096,
          "mode": "direct",
        },
        "start": 8199,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": "BUCLE",
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          361,
          386,
        ],
        "size": 16,
        "src": 4106,
        "start": 8203,
        "type": "instruction",
      },
      {
        "address": 8225,
        "instruction": "JNS",
        "label": null,
        "position": [
          394,
          401,
        ],
        "start": 8207,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "CL",
        "position": [
          409,
          419,
        ],
        "size": 8,
        "src": "AH",
        "start": 8210,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": null,
        "mode": "reg<-reg",
        "out": "CL",
        "position": [
          427,
          437,
        ],
        "size": 8,
        "src": "AL",
        "start": 8212,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "AL",
        "position": [
          445,
          455,
        ],
        "size": 8,
        "src": "AH",
        "start": 8214,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "AH",
        "position": [
          463,
          473,
        ],
        "size": 8,
        "src": "CL",
        "start": 8216,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "mem<-reg",
        "out": {
          "mode": "indirect",
          "offset": null,
        },
        "position": [
          481,
          493,
        ],
        "size": 8,
        "src": "CL",
        "start": 8218,
        "type": "instruction",
      },
      {
        "instruction": "INC",
        "label": null,
        "mode": "reg",
        "position": [
          501,
          507,
        ],
        "reg": "BX",
        "size": 16,
        "start": 8220,
        "type": "instruction",
      },
      {
        "address": 8203,
        "instruction": "JMP",
        "label": null,
        "position": [
          515,
          524,
        ],
        "start": 8222,
        "type": "instruction",
      },
      {
        "instruction": "HLT",
        "label": "FIN",
        "position": [
          532,
          535,
        ],
        "start": 8225,
        "type": "instruction",
      },
    ],
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of multiplicar.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DW",
        "label": "A",
        "position": [
          32,
          37,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          25,
        ],
      },
      {
        "directive": "DW",
        "label": "B",
        "position": [
          50,
          54,
        ],
        "start": 4098,
        "type": "data-directive",
        "values": [
          4,
        ],
      },
      {
        "directive": "DW",
        "label": "RES",
        "position": [
          69,
          73,
        ],
        "start": 4100,
        "type": "data-directive",
        "values": [
          "?",
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AX",
        "position": [
          105,
          114,
        ],
        "size": 16,
        "src": 0,
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "BX",
        "position": [
          125,
          134,
        ],
        "size": 16,
        "src": {
          "address": 4098,
          "mode": "direct",
        },
        "start": 8196,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          145,
          154,
        ],
        "size": 16,
        "src": 0,
        "start": 8200,
        "type": "instruction",
      },
      {
        "address": 8218,
        "instruction": "JZ",
        "label": null,
        "position": [
          165,
          171,
        ],
        "start": 8204,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": "SUMAR",
        "mode": "reg<-mem",
        "out": "AX",
        "position": [
          182,
          190,
        ],
        "size": 16,
        "src": {
          "address": 4096,
          "mode": "direct",
        },
        "start": 8207,
        "type": "instruction",
      },
      {
        "address": 4098,
        "instruction": "DEC",
        "label": null,
        "mode": "mem-direct",
        "position": [
          201,
          206,
        ],
        "size": 16,
        "start": 8211,
        "type": "instruction",
      },
      {
        "address": 8207,
        "instruction": "JNZ",
        "label": null,
        "position": [
          217,
          226,
        ],
        "start": 8215,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": "FIN",
        "mode": "mem<-reg",
        "out": {
          "address": 4100,
          "mode": "direct",
        },
        "position": [
          237,
          248,
        ],
        "size": 16,
        "src": "AX",
        "start": 8218,
        "type": "instruction",
      },
      {
        "instruction": "HLT",
        "label": null,
        "position": [
          259,
          262,
        ],
        "start": 8222,
        "type": "instruction",
      },
    ],
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of parcial.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DB",
        "label": "NOMBRE",
        "position": [
          55,
          77,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          74,
          117,
          97,
          110,
          76,
          111,
          114,
          101,
          110,
          122,
          111,
          77,
          97,
          114,
          116,
          105,
          110,
        ],
      },
      {
        "directive": "DB",
        "label": "FIN_NOMBRE",
        "position": [
          108,
          114,
        ],
        "start": 4113,
        "type": "data-directive",
        "values": [
          0,
        ],
      },
      {
        "directive": "DB",
        "label": "VOCALES",
        "position": [
          142,
          157,
        ],
        "start": 4114,
        "type": "data-directive",
        "values": [
          65,
          69,
          73,
          79,
          85,
          97,
          101,
          105,
          111,
          117,
        ],
      },
      {
        "directive": "DB",
        "label": "FIN_VOCALES",
        "position": [
          189,
          195,
        ],
        "start": 4124,
        "type": "data-directive",
        "values": [
          0,
        ],
      },
      {
        "directive": "DB",
        "label": "CANTIDAD_VOCALES",
        "position": [
          232,
          236,
        ],
        "start": 4125,
        "type": "data-directive",
        "values": [
          0,
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "PUSH",
        "label": "SWAP",
        "position": [
          401,
          408,
        ],
        "register": "AX",
        "start": 12288,
        "type": "instruction",
      },
      {
        "instruction": "PUSH",
        "label": null,
        "position": [
          428,
          435,
        ],
        "register": "BX",
        "start": 12289,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          455,
          465,
        ],
        "size": 16,
        "src": "CX",
        "start": 12290,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AL",
        "position": [
          485,
          497,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 12292,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          538,
          548,
        ],
        "size": 16,
        "src": "DX",
        "start": 12294,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AH",
        "position": [
          568,
          580,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 12296,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "mem<-reg",
        "out": {
          "mode": "indirect",
          "offset": null,
        },
        "position": [
          622,
          634,
        ],
        "size": 8,
        "src": "AL",
        "start": 12298,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          692,
          702,
        ],
        "size": 16,
        "src": "CX",
        "start": 12300,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "mem<-reg",
        "out": {
          "mode": "indirect",
          "offset": null,
        },
        "position": [
          722,
          734,
        ],
        "size": 8,
        "src": "AH",
        "start": 12302,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": null,
        "position": [
          793,
          799,
        ],
        "register": "BX",
        "start": 12304,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": null,
        "position": [
          819,
          825,
        ],
        "register": "AX",
        "start": 12305,
        "type": "instruction",
      },
      {
        "instruction": "RET",
        "label": null,
        "position": [
          845,
          848,
        ],
        "start": 12306,
        "type": "instruction",
      },
      {
        "instruction": "PUSH",
        "label": "ES_VOCAL",
        "position": [
          974,
          981,
        ],
        "register": "BX",
        "start": 12307,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          1001,
          1011,
        ],
        "size": 16,
        "src": "SP",
        "start": 12308,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          1031,
          1044,
        ],
        "size": 16,
        "src": 4,
        "start": 12310,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AL",
        "position": [
          1064,
          1076,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 12314,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          1113,
          1139,
        ],
        "size": 16,
        "src": 4113,
        "start": 12316,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          1159,
          1170,
        ],
        "size": 8,
        "src": 0,
        "start": 12320,
        "type": "instruction",
      },
      {
        "instruction": "INC",
        "label": "ES_VOCAL_LOOP",
        "mode": "reg",
        "position": [
          1190,
          1196,
        ],
        "reg": "BX",
        "size": 16,
        "start": 12323,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          1216,
          1242,
        ],
        "size": 16,
        "src": 4124,
        "start": 12325,
        "type": "instruction",
      },
      {
        "address": 12340,
        "instruction": "JZ",
        "label": null,
        "position": [
          1262,
          1277,
        ],
        "start": 12329,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-mem",
        "out": "AL",
        "position": [
          1297,
          1309,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 12332,
        "type": "instruction",
      },
      {
        "address": 12323,
        "instruction": "JNZ",
        "label": null,
        "position": [
          1329,
          1346,
        ],
        "start": 12334,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          1366,
          1378,
        ],
        "size": 8,
        "src": 255,
        "start": 12337,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": "ES_VOCAL_FIN",
        "position": [
          1398,
          1404,
        ],
        "register": "BX",
        "start": 12340,
        "type": "instruction",
      },
      {
        "instruction": "RET",
        "label": null,
        "position": [
          1424,
          1427,
        ],
        "start": 12341,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "CX",
        "position": [
          1703,
          1724,
        ],
        "size": 16,
        "src": 4096,
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "DX",
        "position": [
          1744,
          1773,
        ],
        "size": 16,
        "src": 4112,
        "start": 8196,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": "MAIN_LOOP",
        "mode": "reg<-reg",
        "out": "DX",
        "position": [
          1793,
          1803,
        ],
        "size": 16,
        "src": "CX",
        "start": 8200,
        "type": "instruction",
      },
      {
        "address": 8264,
        "instruction": "JS",
        "label": null,
        "position": [
          1823,
          1834,
        ],
        "start": 8202,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          1951,
          1961,
        ],
        "size": 16,
        "src": "CX",
        "start": 8205,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AL",
        "position": [
          1981,
          1993,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 8207,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          2013,
          2023,
        ],
        "size": 8,
        "src": 0,
        "start": 8209,
        "type": "instruction",
      },
      {
        "instruction": "PUSH",
        "label": null,
        "position": [
          2043,
          2050,
        ],
        "register": "AX",
        "start": 8212,
        "type": "instruction",
      },
      {
        "address": 12307,
        "instruction": "CALL",
        "label": null,
        "position": [
          2070,
          2083,
        ],
        "start": 8213,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          2103,
          2112,
        ],
        "size": 8,
        "src": 0,
        "start": 8216,
        "type": "instruction",
      },
      {
        "address": 8226,
        "instruction": "JZ",
        "label": null,
        "position": [
          2132,
          2146,
        ],
        "start": 8219,
        "type": "instruction",
      },
      {
        "address": 4125,
        "instruction": "INC",
        "label": null,
        "mode": "mem-direct",
        "position": [
          2166,
          2186,
        ],
        "size": 8,
        "start": 8222,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": "NO_CONTAR_1",
        "position": [
          2206,
          2212,
        ],
        "register": "AX",
        "start": 8226,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-reg",
        "out": "DX",
        "position": [
          2299,
          2309,
        ],
        "size": 16,
        "src": "CX",
        "start": 8227,
        "type": "instruction",
      },
      {
        "address": 8264,
        "instruction": "JZ",
        "label": null,
        "position": [
          2329,
          2340,
        ],
        "start": 8229,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          2457,
          2467,
        ],
        "size": 16,
        "src": "DX",
        "start": 8232,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AL",
        "position": [
          2487,
          2499,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 8234,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          2519,
          2528,
        ],
        "size": 8,
        "src": 0,
        "start": 8236,
        "type": "instruction",
      },
      {
        "instruction": "PUSH",
        "label": null,
        "position": [
          2548,
          2555,
        ],
        "register": "AX",
        "start": 8239,
        "type": "instruction",
      },
      {
        "address": 12307,
        "instruction": "CALL",
        "label": null,
        "position": [
          2575,
          2588,
        ],
        "start": 8240,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          2608,
          2617,
        ],
        "size": 8,
        "src": 0,
        "start": 8243,
        "type": "instruction",
      },
      {
        "address": 8253,
        "instruction": "JZ",
        "label": null,
        "position": [
          2637,
          2651,
        ],
        "start": 8246,
        "type": "instruction",
      },
      {
        "address": 4125,
        "instruction": "INC",
        "label": null,
        "mode": "mem-direct",
        "position": [
          2671,
          2691,
        ],
        "size": 8,
        "start": 8249,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": "NO_CONTAR_2",
        "position": [
          2711,
          2717,
        ],
        "register": "AX",
        "start": 8253,
        "type": "instruction",
      },
      {
        "address": 12288,
        "instruction": "CALL",
        "label": null,
        "position": [
          2766,
          2775,
        ],
        "start": 8254,
        "type": "instruction",
      },
      {
        "instruction": "INC",
        "label": null,
        "mode": "reg",
        "position": [
          2795,
          2801,
        ],
        "reg": "CX",
        "size": 16,
        "start": 8257,
        "type": "instruction",
      },
      {
        "instruction": "DEC",
        "label": null,
        "mode": "reg",
        "position": [
          2821,
          2827,
        ],
        "reg": "DX",
        "size": 16,
        "start": 8259,
        "type": "instruction",
      },
      {
        "address": 8200,
        "instruction": "JMP",
        "label": null,
        "position": [
          2847,
          2860,
        ],
        "start": 8261,
        "type": "instruction",
      },
      {
        "instruction": "HLT",
        "label": "LOOP_FIN",
        "position": [
          2880,
          2883,
        ],
        "start": 8264,
        "type": "instruction",
      },
    ],
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of resto.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DW",
        "label": "N",
        "position": [
          34,
          40,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          255,
        ],
      },
      {
        "directive": "DW",
        "label": "M",
        "position": [
          54,
          58,
        ],
        "start": 4098,
        "type": "data-directive",
        "values": [
          2,
        ],
      },
      {
        "directive": "DW",
        "label": "R",
        "position": [
          72,
          76,
        ],
        "start": 4100,
        "type": "data-directive",
        "values": [
          "?",
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "CMP",
        "label": "RESTO",
        "mode": "reg<-reg",
        "out": "AX",
        "position": [
          238,
          247,
        ],
        "size": 16,
        "src": "BX",
        "start": 12288,
        "type": "instruction",
      },
      {
        "address": 12298,
        "instruction": "JS",
        "label": null,
        "position": [
          259,
          269,
        ],
        "start": 12290,
        "type": "instruction",
      },
      {
        "instruction": "SUB",
        "label": null,
        "mode": "reg<-reg",
        "out": "AX",
        "position": [
          282,
          291,
        ],
        "size": 16,
        "src": "BX",
        "start": 12293,
        "type": "instruction",
      },
      {
        "address": 12288,
        "instruction": "JMP",
        "label": null,
        "position": [
          303,
          312,
        ],
        "start": 12295,
        "type": "instruction",
      },
      {
        "instruction": "RET",
        "label": "RETORNO",
        "position": [
          325,
          328,
        ],
        "start": 12298,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AX",
        "position": [
          362,
          371,
        ],
        "size": 16,
        "src": {
          "address": 4096,
          "mode": "direct",
        },
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "BX",
        "position": [
          383,
          392,
        ],
        "size": 16,
        "src": {
          "address": 4098,
          "mode": "direct",
        },
        "start": 8196,
        "type": "instruction",
      },
      {
        "address": 12288,
        "instruction": "CALL",
        "label": null,
        "position": [
          404,
          414,
        ],
        "start": 8200,
        "type": "instruction",
      },
      {
        "instruction": "HLT",
        "label": null,
        "position": [
          426,
          429,
        ],
        "start": 8203,
        "type": "instruction",
      },
    ],
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of rotar.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DW",
        "label": "NUMEROBINARIO",
        "position": [
          24,
          44,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          32933,
        ],
      },
      {
        "directive": "DW",
        "label": "CANTROTACIONES",
        "position": [
          60,
          64,
        ],
        "start": 4098,
        "type": "data-directive",
        "values": [
          3,
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "DEC",
        "label": "ROTARIZQ",
        "mode": "reg",
        "position": [
          200,
          206,
        ],
        "reg": "CX",
        "size": 16,
        "start": 12288,
        "type": "instruction",
      },
      {
        "address": 12303,
        "instruction": "JS",
        "label": null,
        "position": [
          222,
          237,
        ],
        "start": 12290,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": null,
        "mode": "reg<-reg",
        "out": "AX",
        "position": [
          253,
          262,
        ],
        "size": 16,
        "src": "AX",
        "start": 12293,
        "type": "instruction",
      },
      {
        "address": 12288,
        "instruction": "JNC",
        "label": null,
        "position": [
          278,
          290,
        ],
        "start": 12295,
        "type": "instruction",
      },
      {
        "instruction": "INC",
        "label": null,
        "mode": "reg",
        "position": [
          306,
          312,
        ],
        "reg": "AX",
        "size": 16,
        "start": 12298,
        "type": "instruction",
      },
      {
        "address": 12288,
        "instruction": "JMP",
        "label": null,
        "position": [
          328,
          340,
        ],
        "start": 12300,
        "type": "instruction",
      },
      {
        "instruction": "RET",
        "label": "ROTARIZQ_FIN",
        "position": [
          356,
          359,
        ],
        "start": 12303,
        "type": "instruction",
      },
      {
        "instruction": "SUB",
        "label": "ROTARDER",
        "mode": "reg<-imd",
        "out": "CX",
        "position": [
          484,
          494,
        ],
        "size": 16,
        "src": 16,
        "start": 12304,
        "type": "instruction",
      },
      {
        "instruction": "NEG",
        "label": null,
        "mode": "reg",
        "position": [
          510,
          516,
        ],
        "reg": "CX",
        "size": 16,
        "start": 12308,
        "type": "instruction",
      },
      {
        "address": 12288,
        "instruction": "JMP",
        "label": null,
        "position": [
          532,
          544,
        ],
        "start": 12310,
        "type": "instruction",
      },
      {
        "instruction": "RET",
        "label": null,
        "position": [
          560,
          563,
        ],
        "start": 12313,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AX",
        "position": [
          577,
          598,
        ],
        "size": 16,
        "src": {
          "address": 4096,
          "mode": "direct",
        },
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "CX",
        "position": [
          599,
          621,
        ],
        "size": 16,
        "src": {
          "address": 4098,
          "mode": "direct",
        },
        "start": 8196,
        "type": "instruction",
      },
      {
        "address": 12304,
        "instruction": "CALL",
        "label": null,
        "position": [
          622,
          635,
        ],
        "start": 8200,
        "type": "instruction",
      },
      {
        "instruction": "HLT",
        "label": null,
        "position": [
          636,
          639,
        ],
        "start": 8203,
        "type": "instruction",
      },
    ],
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of sumador_de_tablas.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DW",
        "label": "A",
        "position": [
          52,
          71,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          25,
          4,
          77,
          32,
          6,
        ],
      },
      {
        "directive": "DW",
        "label": "B",
        "position": [
          84,
          103,
        ],
        "start": 4106,
        "type": "data-directive",
        "values": [
          4,
          89,
          32,
          55,
          1,
        ],
      },
      {
        "directive": "DW",
        "label": "RES",
        "position": [
          118,
          134,
        ],
        "start": 4116,
        "type": "data-directive",
        "values": [
          "?",
          "?",
          "?",
          "?",
          "?",
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "CX",
        "position": [
          166,
          177,
        ],
        "size": 16,
        "src": 5,
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": null,
        "mode": "reg<-imd",
        "out": "CX",
        "position": [
          202,
          213,
        ],
        "size": 16,
        "src": 5,
        "start": 8196,
        "type": "instruction",
      },
      {
        "instruction": "SUB",
        "label": null,
        "mode": "reg<-imd",
        "out": "CX",
        "position": [
          224,
          233,
        ],
        "size": 16,
        "src": 2,
        "start": 8200,
        "type": "instruction",
      },
      {
        "address": 8241,
        "instruction": "JS",
        "label": null,
        "position": [
          244,
          250,
        ],
        "start": 8204,
        "type": "instruction",
      },
      {
        "address": 8241,
        "instruction": "JZ",
        "label": null,
        "position": [
          261,
          267,
        ],
        "start": 8207,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": "SUMA",
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          278,
          294,
        ],
        "size": 16,
        "src": 4096,
        "start": 8210,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          305,
          315,
        ],
        "size": 16,
        "src": "CX",
        "start": 8214,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AX",
        "position": [
          326,
          338,
        ],
        "size": 16,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 8216,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          349,
          365,
        ],
        "size": 16,
        "src": 4106,
        "start": 8218,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          376,
          386,
        ],
        "size": 16,
        "src": "CX",
        "start": 8222,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": null,
        "mode": "reg<-mem",
        "out": "AX",
        "position": [
          397,
          409,
        ],
        "size": 16,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 8224,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          420,
          438,
        ],
        "size": 16,
        "src": 4116,
        "start": 8226,
        "type": "instruction",
      },
      {
        "instruction": "ADD",
        "label": null,
        "mode": "reg<-reg",
        "out": "BX",
        "position": [
          449,
          459,
        ],
        "size": 16,
        "src": "CX",
        "start": 8230,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "mem<-reg",
        "out": {
          "mode": "indirect",
          "offset": null,
        },
        "position": [
          470,
          482,
        ],
        "size": 16,
        "src": "AX",
        "start": 8232,
        "type": "instruction",
      },
      {
        "instruction": "SUB",
        "label": null,
        "mode": "reg<-imd",
        "out": "CX",
        "position": [
          493,
          502,
        ],
        "size": 16,
        "src": 2,
        "start": 8234,
        "type": "instruction",
      },
      {
        "address": 8210,
        "instruction": "JNS",
        "label": null,
        "position": [
          513,
          521,
        ],
        "start": 8238,
        "type": "instruction",
      },
      {
        "instruction": "HLT",
        "label": "FIN",
        "position": [
          532,
          535,
        ],
        "start": 8241,
        "type": "instruction",
      },
    ],
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of timer.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DW",
        "label": null,
        "position": [
          398,
          411,
        ],
        "start": 40,
        "type": "data-directive",
        "values": [
          12312,
        ],
      },
      {
        "directive": "DW",
        "label": null,
        "position": [
          454,
          467,
        ],
        "start": 44,
        "type": "data-directive",
        "values": [
          12332,
        ],
      },
      {
        "directive": "DB",
        "label": "INPUT_MSJ",
        "position": [
          500,
          541,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          12,
          73,
          110,
          103,
          114,
          101,
          115,
          101,
          32,
          117,
          110,
          32,
          116,
          105,
          101,
          109,
          112,
          111,
          32,
          40,
          109,
          225,
          120,
          32,
          57,
          57,
          32,
          115,
          101,
          103,
          41,
          58,
          32,
        ],
      },
      {
        "directive": "DB",
        "label": "ERR_MSJ",
        "position": [
          552,
          576,
        ],
        "start": 4129,
        "type": "data-directive",
        "values": [
          10,
          78,
          250,
          109,
          101,
          114,
          111,
          32,
          105,
          110,
          118,
          225,
          108,
          105,
          100,
          111,
        ],
      },
      {
        "directive": "DB",
        "label": "DISP",
        "position": [
          588,
          595,
        ],
        "start": 4145,
        "type": "data-directive",
        "values": [
          8,
          8,
        ],
      },
      {
        "directive": "DB",
        "label": "SEG_H",
        "position": [
          621,
          627,
        ],
        "start": 4147,
        "type": "data-directive",
        "values": [
          48,
        ],
      },
      {
        "directive": "DB",
        "label": "SEG_L",
        "position": [
          638,
          644,
        ],
        "start": 4148,
        "type": "data-directive",
        "values": [
          48,
        ],
      },
      {
        "directive": "DB",
        "label": "COUNT",
        "position": [
          655,
          661,
        ],
        "start": 4149,
        "type": "data-directive",
        "values": [
          0,
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "MOV",
        "label": "ES_NUM",
        "mode": "reg<-mem",
        "out": "AL",
        "position": [
          1030,
          1042,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 12288,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          1059,
          1070,
        ],
        "size": 8,
        "src": 48,
        "start": 12290,
        "type": "instruction",
      },
      {
        "address": 12308,
        "instruction": "JS",
        "label": null,
        "position": [
          1087,
          1098,
        ],
        "start": 12293,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          1115,
          1128,
        ],
        "size": 8,
        "src": 58,
        "start": 12296,
        "type": "instruction",
      },
      {
        "address": 12308,
        "instruction": "JNS",
        "label": null,
        "position": [
          1145,
          1157,
        ],
        "start": 12299,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          1174,
          1186,
        ],
        "size": 8,
        "src": 255,
        "start": 12302,
        "type": "instruction",
      },
      {
        "address": 12311,
        "instruction": "JMP",
        "label": null,
        "position": [
          1203,
          1217,
        ],
        "start": 12305,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": "ES_NUM_F",
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          1234,
          1245,
        ],
        "size": 8,
        "src": 0,
        "start": 12308,
        "type": "instruction",
      },
      {
        "instruction": "RET",
        "label": "ES_NUM_RET",
        "position": [
          1262,
          1265,
        ],
        "start": 12311,
        "type": "instruction",
      },
      {
        "instruction": "PUSH",
        "label": "HANDLE_F10",
        "position": [
          1379,
          1386,
        ],
        "register": "AX",
        "start": 12312,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4149,
          "mode": "direct",
        },
        "position": [
          1403,
          1418,
        ],
        "size": 8,
        "src": 255,
        "start": 12313,
        "type": "instruction",
      },
      {
        "address": 33,
        "instruction": "IN",
        "label": null,
        "port": "fixed",
        "position": [
          1435,
          1445,
        ],
        "size": 8,
        "start": 12318,
        "type": "instruction",
      },
      {
        "instruction": "XOR",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          1462,
          1479,
        ],
        "size": 8,
        "src": 1,
        "start": 12320,
        "type": "instruction",
      },
      {
        "address": 33,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          1496,
          1507,
        ],
        "size": 8,
        "start": 12323,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          1524,
          1535,
        ],
        "size": 8,
        "src": 32,
        "start": 12325,
        "type": "instruction",
      },
      {
        "address": 32,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          1552,
          1563,
        ],
        "size": 8,
        "start": 12328,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": null,
        "position": [
          1580,
          1586,
        ],
        "register": "AX",
        "start": 12330,
        "type": "instruction",
      },
      {
        "instruction": "IRET",
        "label": null,
        "position": [
          1603,
          1607,
        ],
        "start": 12331,
        "type": "instruction",
      },
      {
        "instruction": "PUSH",
        "label": "HANDLE_CLK",
        "position": [
          1741,
          1748,
        ],
        "register": "AX",
        "start": 12332,
        "type": "instruction",
      },
      {
        "instruction": "PUSH",
        "label": null,
        "position": [
          1765,
          1772,
        ],
        "register": "BX",
        "start": 12333,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4149,
          "mode": "direct",
        },
        "position": [
          1789,
          1801,
        ],
        "size": 8,
        "src": 0,
        "start": 12334,
        "type": "instruction",
      },
      {
        "address": 12363,
        "instruction": "JZ",
        "label": null,
        "position": [
          1818,
          1835,
        ],
        "start": 12339,
        "type": "instruction",
      },
      {
        "address": 4148,
        "instruction": "DEC",
        "label": null,
        "mode": "mem-direct",
        "position": [
          1880,
          1889,
        ],
        "size": 8,
        "start": 12342,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4148,
          "mode": "direct",
        },
        "position": [
          1906,
          1920,
        ],
        "size": 8,
        "src": 48,
        "start": 12346,
        "type": "instruction",
      },
      {
        "address": 12363,
        "instruction": "JNS",
        "label": null,
        "position": [
          1937,
          1955,
        ],
        "start": 12351,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4148,
          "mode": "direct",
        },
        "position": [
          1972,
          1986,
        ],
        "size": 8,
        "src": 57,
        "start": 12354,
        "type": "instruction",
      },
      {
        "address": 4147,
        "instruction": "DEC",
        "label": null,
        "mode": "mem-direct",
        "position": [
          2003,
          2012,
        ],
        "size": 8,
        "start": 12359,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": "HANDLE_CLK_END",
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          2029,
          2048,
        ],
        "size": 16,
        "src": 4145,
        "start": 12363,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2065,
          2081,
        ],
        "size": 8,
        "src": 4,
        "start": 12367,
        "type": "instruction",
      },
      {
        "instruction": "INT",
        "label": null,
        "position": [
          2098,
          2103,
        ],
        "start": 12370,
        "type": "instruction",
        "value": 7,
      },
      {
        "address": 17,
        "instruction": "IN",
        "label": null,
        "port": "fixed",
        "position": [
          2120,
          2131,
        ],
        "size": 8,
        "start": 12372,
        "type": "instruction",
      },
      {
        "instruction": "INC",
        "label": null,
        "mode": "reg",
        "position": [
          2162,
          2168,
        ],
        "reg": "AL",
        "size": 8,
        "start": 12374,
        "type": "instruction",
      },
      {
        "address": 17,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          2185,
          2197,
        ],
        "size": 8,
        "start": 12376,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2214,
          2225,
        ],
        "size": 8,
        "src": 32,
        "start": 12378,
        "type": "instruction",
      },
      {
        "address": 32,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          2242,
          2253,
        ],
        "size": 8,
        "start": 12381,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": null,
        "position": [
          2270,
          2276,
        ],
        "register": "BX",
        "start": 12383,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": null,
        "position": [
          2293,
          2299,
        ],
        "register": "AX",
        "start": 12384,
        "type": "instruction",
      },
      {
        "instruction": "IRET",
        "label": null,
        "position": [
          2316,
          2320,
        ],
        "start": 12385,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          2349,
          2373,
        ],
        "size": 16,
        "src": 4096,
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2382,
          2399,
        ],
        "size": 8,
        "src": 33,
        "start": 8196,
        "type": "instruction",
      },
      {
        "instruction": "INT",
        "label": null,
        "position": [
          2408,
          2413,
        ],
        "start": 8199,
        "type": "instruction",
        "value": 7,
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          2422,
          2442,
        ],
        "size": 16,
        "src": 4147,
        "start": 8201,
        "type": "instruction",
      },
      {
        "instruction": "INT",
        "label": null,
        "position": [
          2451,
          2456,
        ],
        "start": 8205,
        "type": "instruction",
        "value": 6,
      },
      {
        "address": 12288,
        "instruction": "CALL",
        "label": null,
        "position": [
          2465,
          2476,
        ],
        "start": 8207,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2485,
          2496,
        ],
        "size": 8,
        "src": 0,
        "start": 8210,
        "type": "instruction",
      },
      {
        "address": 8277,
        "instruction": "JZ",
        "label": null,
        "position": [
          2505,
          2513,
        ],
        "start": 8213,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          2522,
          2542,
        ],
        "size": 16,
        "src": 4148,
        "start": 8216,
        "type": "instruction",
      },
      {
        "instruction": "INT",
        "label": null,
        "position": [
          2551,
          2556,
        ],
        "start": 8220,
        "type": "instruction",
        "value": 6,
      },
      {
        "address": 12288,
        "instruction": "CALL",
        "label": null,
        "position": [
          2565,
          2576,
        ],
        "start": 8222,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2585,
          2596,
        ],
        "size": 8,
        "src": 0,
        "start": 8225,
        "type": "instruction",
      },
      {
        "address": 8277,
        "instruction": "JZ",
        "label": null,
        "position": [
          2605,
          2613,
        ],
        "start": 8228,
        "type": "instruction",
      },
      {
        "instruction": "CLI",
        "label": null,
        "position": [
          2623,
          2626,
        ],
        "start": 8231,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2635,
          2644,
        ],
        "size": 8,
        "src": 1,
        "start": 8232,
        "type": "instruction",
      },
      {
        "address": 17,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          2653,
          2665,
        ],
        "size": 8,
        "start": 8235,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2674,
          2683,
        ],
        "size": 8,
        "src": 0,
        "start": 8237,
        "type": "instruction",
      },
      {
        "address": 16,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          2692,
          2704,
        ],
        "size": 8,
        "start": 8240,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2713,
          2730,
        ],
        "size": 8,
        "src": 252,
        "start": 8242,
        "type": "instruction",
      },
      {
        "address": 33,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          2739,
          2750,
        ],
        "size": 8,
        "start": 8245,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2759,
          2772,
        ],
        "size": 8,
        "src": 10,
        "start": 8247,
        "type": "instruction",
      },
      {
        "address": 36,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          2781,
          2793,
        ],
        "size": 8,
        "start": 8250,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2802,
          2815,
        ],
        "size": 8,
        "src": 11,
        "start": 8252,
        "type": "instruction",
      },
      {
        "address": 37,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          2824,
          2836,
        ],
        "size": 8,
        "start": 8255,
        "type": "instruction",
      },
      {
        "instruction": "STI",
        "label": null,
        "position": [
          2845,
          2848,
        ],
        "start": 8257,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": "LOOP",
        "mode": "mem<-imd",
        "out": {
          "address": 4147,
          "mode": "direct",
        },
        "position": [
          2858,
          2872,
        ],
        "size": 8,
        "src": 48,
        "start": 8258,
        "type": "instruction",
      },
      {
        "address": 8258,
        "instruction": "JNZ",
        "label": null,
        "position": [
          2881,
          2889,
        ],
        "start": 8263,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4148,
          "mode": "direct",
        },
        "position": [
          2898,
          2912,
        ],
        "size": 8,
        "src": 48,
        "start": 8266,
        "type": "instruction",
      },
      {
        "address": 8258,
        "instruction": "JNZ",
        "label": null,
        "position": [
          2921,
          2929,
        ],
        "start": 8271,
        "type": "instruction",
      },
      {
        "address": 8286,
        "instruction": "JMP",
        "label": null,
        "position": [
          2938,
          2945,
        ],
        "start": 8274,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": "ERROR",
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          2955,
          2977,
        ],
        "size": 16,
        "src": 4129,
        "start": 8277,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          2986,
          3001,
        ],
        "size": 8,
        "src": 16,
        "start": 8281,
        "type": "instruction",
      },
      {
        "instruction": "INT",
        "label": null,
        "position": [
          3010,
          3015,
        ],
        "start": 8284,
        "type": "instruction",
        "value": 7,
      },
      {
        "instruction": "INT",
        "label": "FIN",
        "position": [
          3024,
          3029,
        ],
        "start": 8286,
        "type": "instruction",
        "value": 0,
      },
    ],
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of timer-cac.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DW",
        "label": "IP_CLK",
        "position": [
          372,
          382,
        ],
        "start": 40,
        "type": "data-directive",
        "values": [
          12288,
        ],
      },
      {
        "directive": "DB",
        "label": "SEG",
        "position": [
          414,
          420,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          48,
        ],
      },
      {
        "directive": "DB",
        "label": null,
        "position": [
          431,
          437,
        ],
        "start": 4097,
        "type": "data-directive",
        "values": [
          48,
        ],
      },
      {
        "directive": "DB",
        "label": "FIN",
        "position": [
          448,
          452,
        ],
        "start": 4098,
        "type": "data-directive",
        "values": [
          "?",
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "PUSH",
        "label": "RUT_CLK",
        "position": [
          484,
          491,
        ],
        "register": "AX",
        "start": 12288,
        "type": "instruction",
      },
      {
        "address": 4097,
        "instruction": "INC",
        "label": null,
        "mode": "mem-direct",
        "position": [
          502,
          511,
        ],
        "size": 8,
        "start": 12289,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4097,
          "mode": "direct",
        },
        "position": [
          522,
          536,
        ],
        "size": 8,
        "src": 58,
        "start": 12293,
        "type": "instruction",
      },
      {
        "address": 12323,
        "instruction": "JNZ",
        "label": null,
        "position": [
          547,
          556,
        ],
        "start": 12298,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4097,
          "mode": "direct",
        },
        "position": [
          567,
          581,
        ],
        "size": 8,
        "src": 48,
        "start": 12301,
        "type": "instruction",
      },
      {
        "address": 4096,
        "instruction": "INC",
        "label": null,
        "mode": "mem-direct",
        "position": [
          592,
          599,
        ],
        "size": 8,
        "start": 12306,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4096,
          "mode": "direct",
        },
        "position": [
          610,
          622,
        ],
        "size": 8,
        "src": 54,
        "start": 12310,
        "type": "instruction",
      },
      {
        "address": 12323,
        "instruction": "JNZ",
        "label": null,
        "position": [
          633,
          642,
        ],
        "start": 12315,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "mem<-imd",
        "out": {
          "address": 4096,
          "mode": "direct",
        },
        "position": [
          653,
          665,
        ],
        "size": 8,
        "src": 48,
        "start": 12318,
        "type": "instruction",
      },
      {
        "instruction": "INT",
        "label": "RESET",
        "position": [
          676,
          681,
        ],
        "start": 12323,
        "type": "instruction",
        "value": 7,
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          692,
          701,
        ],
        "size": 8,
        "src": 0,
        "start": 12325,
        "type": "instruction",
      },
      {
        "address": 16,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          712,
          725,
        ],
        "size": 8,
        "start": 12328,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          736,
          747,
        ],
        "size": 8,
        "src": 32,
        "start": 12330,
        "type": "instruction",
      },
      {
        "address": 32,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          758,
          769,
        ],
        "size": 8,
        "start": 12333,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": null,
        "position": [
          780,
          786,
        ],
        "register": "AX",
        "start": 12335,
        "type": "instruction",
      },
      {
        "instruction": "IRET",
        "label": null,
        "position": [
          797,
          801,
        ],
        "start": 12336,
        "type": "instruction",
      },
      {
        "instruction": "CLI",
        "label": null,
        "position": [
          833,
          836,
        ],
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          847,
          859,
        ],
        "size": 8,
        "src": 253,
        "start": 8193,
        "type": "instruction",
      },
      {
        "address": 33,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          870,
          883,
        ],
        "size": 8,
        "start": 8196,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          914,
          927,
        ],
        "size": 8,
        "src": 10,
        "start": 8198,
        "type": "instruction",
      },
      {
        "address": 37,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          938,
          951,
        ],
        "size": 8,
        "start": 8201,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          983,
          992,
        ],
        "size": 8,
        "src": 1,
        "start": 8203,
        "type": "instruction",
      },
      {
        "address": 17,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          1003,
          1018,
        ],
        "size": 8,
        "start": 8206,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          1052,
          1061,
        ],
        "size": 8,
        "src": 0,
        "start": 8208,
        "type": "instruction",
      },
      {
        "address": 16,
        "instruction": "OUT",
        "label": null,
        "port": "fixed",
        "position": [
          1072,
          1085,
        ],
        "size": 8,
        "start": 8211,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          1119,
          1137,
        ],
        "size": 16,
        "src": 4096,
        "start": 8213,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AL",
        "position": [
          1148,
          1177,
        ],
        "size": 8,
        "src": 2,
        "start": 8217,
        "type": "instruction",
      },
      {
        "instruction": "STI",
        "label": null,
        "position": [
          1188,
          1191,
        ],
        "start": 8220,
        "type": "instruction",
      },
      {
        "address": 8221,
        "instruction": "JMP",
        "label": "LAZO",
        "position": [
          1202,
          1210,
        ],
        "start": 8221,
        "type": "instruction",
      },
    ],
  },
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of vocales.asm 1`] = `
{
  "metadata": {},
  "program": {
    "data": [
      {
        "directive": "DB",
        "label": "VOCALES",
        "position": [
          48,
          63,
        ],
        "start": 4096,
        "type": "data-directive",
        "values": [
          65,
          69,
          73,
          79,
          85,
          97,
          101,
          105,
          111,
          117,
        ],
      },
      {
        "directive": "DB",
        "label": "FIN_VOCALES",
        "position": [
          91,
          95,
        ],
        "start": 4106,
        "type": "data-directive",
        "values": [
          "?",
        ],
      },
      {
        "directive": "DB",
        "label": "TEXTO",
        "position": [
          117,
          131,
        ],
        "start": 4107,
        "type": "data-directive",
        "values": [
          80,
          105,
          114,
          117,
          108,
          101,
          116,
          97,
          46,
        ],
      },
      {
        "directive": "DB",
        "label": "FIN_TEXTO",
        "position": [
          157,
          161,
        ],
        "start": 4116,
        "type": "data-directive",
        "values": [
          "?",
        ],
      },
    ],
    "instructions": [
      {
        "instruction": "MOV",
        "label": "ES_VOCAL",
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          297,
          323,
        ],
        "size": 16,
        "src": 4095,
        "start": 12288,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          339,
          350,
        ],
        "size": 8,
        "src": 0,
        "start": 12292,
        "type": "instruction",
      },
      {
        "instruction": "INC",
        "label": "ES_VOCAL_LOOP",
        "mode": "reg",
        "position": [
          366,
          372,
        ],
        "reg": "BX",
        "size": 16,
        "start": 12295,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          388,
          414,
        ],
        "size": 16,
        "src": 4106,
        "start": 12297,
        "type": "instruction",
      },
      {
        "address": 12312,
        "instruction": "JZ",
        "label": null,
        "position": [
          430,
          445,
        ],
        "start": 12301,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-mem",
        "out": "AL",
        "position": [
          461,
          473,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 12304,
        "type": "instruction",
      },
      {
        "address": 12295,
        "instruction": "JNZ",
        "label": null,
        "position": [
          489,
          506,
        ],
        "start": 12306,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          522,
          534,
        ],
        "size": 8,
        "src": 255,
        "start": 12309,
        "type": "instruction",
      },
      {
        "instruction": "RET",
        "label": "ES_VOCAL_FIN",
        "position": [
          550,
          553,
        ],
        "start": 12312,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": "CANT_VOCALES",
        "mode": "reg<-imd",
        "out": "DX",
        "position": [
          735,
          744,
        ],
        "size": 16,
        "src": 0,
        "start": 12313,
        "type": "instruction",
      },
      {
        "instruction": "DEC",
        "label": "CANT_VOCALES_LOOP",
        "mode": "reg",
        "position": [
          764,
          770,
        ],
        "reg": "CX",
        "size": 16,
        "start": 12317,
        "type": "instruction",
      },
      {
        "address": 12342,
        "instruction": "JS",
        "label": null,
        "position": [
          790,
          809,
        ],
        "start": 12319,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-mem",
        "out": "AL",
        "position": [
          829,
          840,
        ],
        "size": 8,
        "src": {
          "mode": "indirect",
          "offset": null,
        },
        "start": 12322,
        "type": "instruction",
      },
      {
        "instruction": "PUSH",
        "label": null,
        "position": [
          860,
          867,
        ],
        "register": "BX",
        "start": 12324,
        "type": "instruction",
      },
      {
        "address": 12288,
        "instruction": "CALL",
        "label": null,
        "position": [
          887,
          900,
        ],
        "start": 12325,
        "type": "instruction",
      },
      {
        "instruction": "POP",
        "label": null,
        "position": [
          920,
          926,
        ],
        "register": "BX",
        "start": 12328,
        "type": "instruction",
      },
      {
        "instruction": "INC",
        "label": null,
        "mode": "reg",
        "position": [
          946,
          952,
        ],
        "reg": "BX",
        "size": 16,
        "start": 12329,
        "type": "instruction",
      },
      {
        "instruction": "CMP",
        "label": null,
        "mode": "reg<-imd",
        "out": "AH",
        "position": [
          972,
          980,
        ],
        "size": 8,
        "src": 0,
        "start": 12331,
        "type": "instruction",
      },
      {
        "address": 12317,
        "instruction": "JZ",
        "label": null,
        "position": [
          1000,
          1020,
        ],
        "start": 12334,
        "type": "instruction",
      },
      {
        "instruction": "INC",
        "label": null,
        "mode": "reg",
        "position": [
          1040,
          1046,
        ],
        "reg": "DX",
        "size": 16,
        "start": 12337,
        "type": "instruction",
      },
      {
        "address": 12317,
        "instruction": "JMP",
        "label": null,
        "position": [
          1066,
          1087,
        ],
        "start": 12339,
        "type": "instruction",
      },
      {
        "instruction": "RET",
        "label": "CANT_VOCALES_FIN",
        "position": [
          1107,
          1110,
        ],
        "start": 12342,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "BX",
        "position": [
          1152,
          1172,
        ],
        "size": 16,
        "src": 4107,
        "start": 8192,
        "type": "instruction",
      },
      {
        "instruction": "MOV",
        "label": null,
        "mode": "reg<-imd",
        "out": "CX",
        "position": [
          1188,
          1227,
        ],
        "size": 16,
        "src": 9,
        "start": 8196,
        "type": "instruction",
      },
      {
        "address": 12313,
        "instruction": "CALL",
        "label": null,
        "position": [
          1243,
          1260,
        ],
        "start": 8200,
        "type": "instruction",
      },
      {
        "instruction": "HLT",
        "label": null,
        "position": [
          1276,
          1279,
        ],
        "start": 8203,
        "type": "instruction",
      },
    ],
  },
  "success": true,
}
`;
